Fix overlapping elements in website (#697)
* have angled bit not hang off the rhs

* Don't let background images extend the page

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -166,15 +166,20 @@ hr {
     top: 50px;
     display: none;
 }
-.sideimg img {
-    height: auto;
+.sideimg div {
+    height: 250px;
     position: absolute;
     opacity: 0.2;
     z-index: -1000;
     display: none;
+    overflow-x: hidden;
+    overflow-y: visible;
+}
+.sideimg div img {
+    position: relative;
 }
 @media only screen and (min-width: 800px) {
-    .sideimg img, .hdrimg2 img {
+    .sideimg div, .hdrimg2 img {
         display: block;
     }
 }
@@ -547,14 +552,16 @@ footer > div {
     height: auto;
 }
 .index-corner {
-    background-color: #111111;
     position: absolute;
-    top: -60em;
-    right: -40em;
-    width: 80em;
-    height: 80em;
+    top: -10em;
+    right: 0;
+    width: 30em;
+    height: 10em;
+    border-top: 0 solid transparent;
+    border-left: 0 solid transparent;
+    border-right: 30em solid #111111;
+    border-bottom: 20em solid transparent;
     opacity: 0.7;
-    transform: rotate(30deg);
     z-index: -20;
 }
 @media (max-width: 1000px) {
